<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text4"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="50dp"
        android:gravity="center" />

    <ImageView
        android:id="@+id/animationImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/imageDes"
        android:src="@drawable/uvpce_logo"
        android:layout_marginBottom="50dp" />

    <Button
        android:id="@+id/btnOpenSecondActivity"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/text5"
        android:layout_marginBottom="20dp"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnAnimation"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/text6"
        android:layout_marginBottom="20dp"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnColorMenu"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/text7"
        android:textSize="16sp" />

</LinearLayout>